[package]
name = "chiplet"
version = "0.1.0"
edition = "2021"
authors = ["Guangyu Zhu <guangyuz@gmail.com>"]

[dependencies]
halo2_proofs = { git = "https://github.com/young-rocks/halo2", rev = "445a4e275d7f3088d48d1eb27ba177644b9aa550" }
halo2_gadgets = { git = "https://github.com/young-rocks/halo2", rev = "445a4e275d7f3088d48d1eb27ba177644b9aa550" }
smt = { path = "../smt" }
rand = "0.8"

