[package]
name = "smt"
version = "0.1.0"
edition = "2021"
authors = ["Guangyu Zhu <guangyuz@gmail.com>"]

[dependencies]
halo2_proofs = { path = "../../halo2/halo2_proofs"}
halo2_gadgets = { path = "../../halo2/halo2_gadgets"}
pasta_curves = "0.4"
ark-std = { version = "^0.3.0", default-features = false }
anyhow = "1.0.41"
ff = "0.12"
rand = "0.8"
group = "0.12"


