[package]
name = "smt"
version = "0.1.0"
edition = "2021"
authors = ["Guangyu Zhu <guangyuz@gmail.com>"]

[dependencies]
halo2_proofs = { git = "https://github.com/young-rocks/halo2", rev = "445a4e275d7f3088d48d1eb27ba177644b9aa550" }
halo2_gadgets = { git = "https://github.com/young-rocks/halo2", rev = "445a4e275d7f3088d48d1eb27ba177644b9aa550" }
pasta_curves = "0.4"
ark-std = { version = "^0.3.0", default-features = false }
anyhow = "1.0.41"
ff = "0.12"
rand = "0.8"

